deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shark-socket
  namespace: shark-socket
  labels:
    app: shark-socket
spec:
  type: ClusterIP
  selector:
    app: shark-socket
  ports:
    - name: tcp
      port: 18000
      targetPort: 18000
      protocol: TCP
    - name: metrics
      port: 18080
      targetPort: 18080
      protocol: TCP
    - name: health
      port: 18081
      targetPort: 18081
      protocol: TCP
